examples/core/errors/syntax_recovery/02_extra_closing_paren.output.txt

error[E0102]: Undefined variable
  ┌─ input:4:2
2 │ // The parser should recover after the extra )
3 │ // and potentially treat this as just (x)
4 │ (x))
     ^
5 │ 
  = hint: Check variable name and scope

